 <resources>
    <string name="app_name">Quick Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_classic">Classic</string>
    <string name="btn_arcade">Arcade</string>
    <string name="btn_categories">Categories</string>
    <string name="btn_profile">Profile</string>
    <string name="logo">logo</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="info_icon">Info Icon</string>
    <string name="setting">Setting</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="home">Home</string>
    <string name="rules">Rules</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="back_button">Back Button</string>
    <string name="quiz_filter">Quiz Filter</string>
    <string name="select_time_period">Select Time Period</string>
    <string name="_2_minutes">2 Minutes</string>
    <string name="_3_minutes">3 Minutes</string>
    <string name="_5_minutes">5 Minutes</string>
    <string name="_8_minutes">8 Minutes</string>
    <string name="_10_minutes">10 Minutes</string>
    <string name="select_category">Select Category</string>
    <string name="play">Play</string>
    <string name="categories">CATEGORIES</string>
    <string name="game_life_heart">Game Life Heart</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>
    <string name="timer_clock">Timer Clock</string>
    <string name="category_image">category image</string>
    <string name="game_over">GAME OVER</string>
    <string name="correct">Correct</string>
    <string name="unanswered">Unanswered</string>
    <string name="play_again">Play Again</string>
    <string name="wrong">Wrong</string>
    <string name="arcade_rules">Play 60 seconds and try to answer as many questions as you can.</string>
    <string formatted="false" name="share_score">I answered %d questions correctly with %d%%  accuracy on Quick Quiz today!\nTo enhance your knowledge, try this Quick Quiz app: https://www.wikipedia.org/</string>
    <string name="your_performance">Your Performance</string>
    <string name="answered">Answered</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="score_0">0%</string>
    <string name="performance_per_category">Performance per category</string>
    <string name="questions_0">Questions: 0</string>
    <string name="how_knowledgeable_are_you">How knowledgeable are you?</string>
    <string name="menu">Menu</string>
     <string name="qs"><b>Q:</b> %d</string>
    <string name="floating_bookmark_button">floating bookmark button</string>
     <string name="game_rules">In this quiz, you keep getting general knowledge questions from different topics until you gave 3 wrong answers. One wrong answer cost one game life.<br/>There will be 20 seconds to answer each questions. Time up also cost one game life.</string>


 </resources>