<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homeViewModel"
            type="com.app.quickquiz.home.HomeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/apple_white"
        tools:context=".home.HomeFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:fitsSystemWindows="true"
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:background="@drawable/custom_home_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="70dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <android.widget.Button
            android:id="@+id/button"
            style="@style/HomeButton"
            android:layout_width="match_parent"
            android:layout_marginTop="52dp"
            android:background="@drawable/custom_btn_classic"
            android:drawableStart="@drawable/ic_quick_play"
            android:onClick="@{() -> homeViewModel.onStartQuiz()}"
            android:text="@string/btn_classic"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <android.widget.Button
            android:id="@+id/button2"
            style="@style/HomeButton"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_btn_arcade"
            android:drawableStart="@drawable/ic_time"
            android:onClick="@{() -> homeViewModel.onNavigateToQuizFilter()}"
            android:text="@string/btn_arcade"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <android.widget.Button
            android:id="@+id/button3"
            style="@style/HomeButton"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/custom_btn_category"
            android:drawableStart="@drawable/ic_category"
            android:onClick="@{() -> homeViewModel.onNavigateToCategory()}"
            android:text="@string/btn_categories"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/quotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/how_knowledgeable_are_you"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>