<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="scoreViewModel"
            type="com.app.quickquiz.score.ScoreViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".score.ScoreFragment">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:text="@string/game_over"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/score_quotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="Well Done" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:indeterminateOnly="false"
            android:progressDrawable="@drawable/circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_quotes" />

        <TextView
            android:id="@+id/progress_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="@+id/progressBar"
            app:layout_constraintTop_toTopOf="@+id/progressBar"
            tools:text="60%" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="#c0c0c0"
            app:layout_constraintEnd_toEndOf="@+id/textView24"
            app:layout_constraintStart_toStartOf="@+id/textView22"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:background="#c0c0c0"
            app:layout_constraintBottom_toBottomOf="@+id/textView22"
            app:layout_constraintEnd_toStartOf="@+id/unAnsTitle"
            app:layout_constraintTop_toTopOf="@+id/rightAns" />

        <TextView
            android:id="@+id/unAnswered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/unAnsTitle"
            app:layout_constraintEnd_toEndOf="@+id/unAnsTitle"
            app:layout_constraintStart_toStartOf="@+id/unAnsTitle"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            tools:text="2" />

        <View
            android:id="@+id/horizontal_view2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:background="#c0c0c0"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/view2"
            app:layout_constraintStart_toEndOf="@+id/unAnsTitle"
            app:layout_constraintTop_toTopOf="@+id/view2"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/rightAns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView22"
            app:layout_constraintEnd_toEndOf="@+id/textView22"
            app:layout_constraintStart_toStartOf="@+id/textView22"
            app:layout_constraintTop_toTopOf="@+id/unAnswered"
            tools:text="5" />

        <TextView
            android:id="@+id/wrongAns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView24"
            app:layout_constraintEnd_toEndOf="@+id/textView24"
            app:layout_constraintStart_toStartOf="@+id/textView24"
            app:layout_constraintTop_toTopOf="@+id/unAnswered"
            app:layout_constraintVertical_bias="0.0"
            tools:text="7" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/correct"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/unAnsTitle"
            app:layout_constraintEnd_toStartOf="@+id/view2" />

        <TextView
            android:id="@+id/unAnsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/unanswered"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/wrong"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/unAnsTitle"
            app:layout_constraintStart_toEndOf="@+id/horizontal_view2" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:background="@drawable/ic_home"
            android:backgroundTint="@color/brown"
            android:onClick="@{() -> scoreViewModel.onNavigateToHome()}"
            app:layout_constraintBottom_toBottomOf="@+id/textView26"
            app:layout_constraintEnd_toStartOf="@+id/textView26"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView26"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="25dp"
            android:onClick="@{() -> scoreViewModel.onNavigateToProfile()}"
            android:background="@drawable/ic_user"
            android:backgroundTint="@color/blue_sky"
            app:layout_constraintEnd_toStartOf="@+id/share_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView25"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_share"
            android:backgroundTint="@color/teal_700"
            app:layout_constraintBottom_toBottomOf="@+id/textView26"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView26"
            app:layout_constraintTop_toTopOf="@+id/textView26" />

        <Button
            android:id="@+id/tryAgain_btn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="72dp"
            android:text="@string/play_again"
            android:onClick="@{() -> scoreViewModel.onNavigateFromPlayAgain()}"
            android:textSize="18sp"
            android:backgroundTint="@color/green"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>